--- a/common/app/assets/stylesheets/module/experiments/_story.scss
+++ b/common/app/assets/stylesheets/module/experiments/_story.scss
@@ -310,7 +310,7 @@ $orange: #FF7F00;
     max-width: 100%;
     max-height: 200px;
 
-    @media (min-width: $tablet) {
+    @include mq(tablet) {
         max-height: 400px;
     }
 
