--- a/common/app/views/fragments/header.scala.html
+++ b/common/app/views/fragments/header.scala.html
@@ -6,7 +6,7 @@
         <a @SiteOr{ site => href="/" }{ href="@LinkTo{/}" }
             id="logo" class="i i-guardian-logo" data-link-name="site logo">The Guardian</a>
 
-        <span class="beta">BETA</span>
+        <span class="beta">Beta</span>
 
         <div class="nav-container">
             <ul class="nav nav--global" data-link-name="Sections">
