--- a/common/app/assets/stylesheets/module/_forms.scss
+++ b/common/app/assets/stylesheets/module/_forms.scss
@@ -1,23 +1,89 @@
+[type=checkbox] {
+    height: 13px;
+    margin-left: $baseline;
+    vertical-align: middle;
+    width: 13px;
+}
+
 form,
-.form {}
+.form {
+    margin: 0 auto $gutter;
+    max-width: 480px;
+    padding: 0 $gutter;
+}
+
+.form__heading {
+    margin-left: 0;
+    margin-right: 0;
+}
 
 .form-fields {
-    margin: 0;
+    margin: $baseline*2 0 0 0;
     padding: 0;
 }
 
-.form-fields > li {
+.form-fields > li,
+.form-field {
     list-style: none;
     margin: 0;
-    padding: 0;
+    padding: $baseline*2 0;
+}
+
+.form-field--error {
+    label, .label {
+        color: $newsRed;
+    }
+
+    .text-input {
+        border-color: $newsRed;
+    }   
+}
+
+.form-field__error {
+    color: $newsRed;
 }
 
 label,
-.label {}
+.label {
+    display: block;
+}
 
-.text-input {}
+.text-input {
+    border: 1px solid $darkMushroom;
+    box-sizing: border-box;
+    display: inline-block;
+    font-family: $sans-serif;
+    padding: $baseline*2;
+    width: 100%;
+}
+
+.submit-input {
+    background-color: $ctaBlue;
+    border: 1px solid darken($ctaBlue, 5%);
+    color: #fff;
+    font-family: $sans-serif;
+    font-weight: 800;
+    margin: 0 $gutter 0 0;
+    padding: $baseline*2 $baseline*4;
+
+    &:active {
+        background-color: darken($ctaBlue, 4%);
+        box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.3);
+    }
+}
+
+.text-input__note {
+    font-family: $sans-serif;
+    font-size: 13px;
+    font-size: 1.3rem;
+}
 
 .check-list {}
 
 .check-list label,
-.check-label {}
+.check-label {
+    display: inline-block;
+    font-family: $sans-serif;
+    font-size: 13px;
+    font-size: 1.3rem;
+}
