--- a/identity/app/views/signin.scala.html
+++ b/identity/app/views/signin.scala.html
@@ -13,13 +13,13 @@
         <li>
             <label for="password">Password</label>
             <input class="text-input" type="password" id="password" />
-            <a class="text-input__note" href="/id/recover">Forgotten password?</a>
+            <!-- <a class="text-input__note" href="/identity/recover">Forgotten password?</a> -->
         </li>
         <li>
             <button type="submit" class="submit-input">Sign in</button>
             
-            <label for="persistent-login" class="check-label">Remember me</label>
             <input type="checkbox" value="1" id="persistent-login" />
+            <label for="persistent-login" class="check-label">Remember me</label>
         </li>
   </ul>
 </form>
